# ix-llm-terminal

./: README.md  pyproject.toml
ix/: cli.py  config.py  exceptions.py  llama_setup.py  setup.py
ix/providers/: base.py  llama_llm.py  openai_llm.py  provider_factory.py
